--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*=========
   Testing
 ===========*/
-* {
+/* * {
   outline: 1px dashed red;
-}
+} */
 
 /*=====================================
   Box-sizing | Initial margin padding
