--- a/style.css
+++ b/style.css
@@ -202,8 +202,8 @@ nav .right-items li {
 .box {
   z-index: 1;
   position: absolute;
-  background: var(--background);
-  height: 13rem;
+  background: linear-gradient(var(--background) 90%, transparent);
+  height: 23rem;
 }
 
 @media (max-width: 1240px) {
