Removed footer padding targeting viewports < 550px

--- a/style.css
+++ b/style.css
@@ -216,80 +216,6 @@ nav .right-items li {
   height: 23rem;
 }
 
-@media (max-width: 1240px) {
-  aside, .box {
-    visibility: hidden;
-  }
-  
-}
-
-@media (max-width: 861px) {
-  nav {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-  
-  nav .left-items {
-    flex-wrap: wrap;
-  }
-
-  nav .right-items {
-    align-self: flex-start;
-  }
-}
-
-@media (max-width: 727px) {
-  nav {
-    flex-direction: column-reverse;
-    padding: 1rem 0 4rem;
-    gap: 2rem;
-  }
-
-  nav .right-items {
-    width: 100%;
-  }
-
-  nav .left-items {
-    width: 60vw;
-    align-self: flex-start;
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-
-  nav .right-items {
-    padding: 0 0 1rem;
-  }
-
-  nav .right-items li:not(:last-child) {
-    padding-left: 2rem;
-  }
-
-  nav .right-items .nav-logo {
-    padding-right: 2rem;
-  }
-
-  nav .right-items {
-    justify-content: space-between;
-    align-content: space-between;
-    border-bottom: 0.1rem solid var(--border-grey);
-  }
-
-  .article-nav {
-    flex-direction: column-reverse;
-    gap: 1rem;
-  }
-
-  footer {
-    flex-direction: column;
-  }
-}
-
-@media (max-width: 550px) {
-  nav {
-    padding: 1rem 0 1rem;
-  }
-}
-
 /*=======
   aside
 =========*/
@@ -497,4 +423,86 @@ footer ul {
 footer li {
   margin-right: 0.5rem;
   cursor: pointer;
+}
+
+/*================
+  Responsiveness
+==================*/
+
+@media (max-width: 1240px) {
+  aside, .box {
+    visibility: hidden;
+  }
+  
+}
+
+@media (max-width: 861px) {
+  nav {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  
+  nav .left-items {
+    flex-wrap: wrap;
+  }
+
+  nav .right-items {
+    align-self: flex-start;
+  }
+}
+
+@media (max-width: 727px) {
+  nav {
+    flex-direction: column-reverse;
+    padding: 1rem 0 4rem;
+    gap: 2rem;
+  }
+
+  nav .right-items {
+    width: 100%;
+  }
+
+  nav .left-items {
+    width: 60vw;
+    align-self: flex-start;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  nav .right-items {
+    padding: 0 0 1rem;
+  }
+
+  nav .right-items li:not(:last-child) {
+    padding-left: 2rem;
+  }
+
+  nav .right-items .nav-logo {
+    padding-right: 2rem;
+  }
+
+  nav .right-items {
+    justify-content: space-between;
+    align-content: space-between;
+    border-bottom: 0.1rem solid var(--border-grey);
+  }
+
+  .article-nav {
+    flex-direction: column-reverse;
+    gap: 1rem;
+  }
+
+  footer {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 550px) {
+  nav {
+    padding: 1rem 0 1rem;
+  }
+
+  footer {
+    padding: 0;
+  }
 }
