Added underline to comment; emphasis

--- a/02-month-in-review/styles/02-feb-2022.css
+++ b/02-month-in-review/styles/02-feb-2022.css
@@ -472,6 +472,9 @@ main .thread-info-bar {
   margin-right: 0.5rem;
 }
 
+.underline {
+  text-decoration: underline;
+}
 /*=========
   sidebar
 ===========*/
